[gd_scene load_steps=43 format=3 uid="uid://bmic0k4ekqnnb"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_nm4va"]
[ext_resource type="Texture2D" uid="uid://d1uubnbiv6bdq" path="res://Assets/PlayerAssets/DarkSamuraiAssets/DarkSamurai (64x64).png" id="1_siewb"]
[ext_resource type="Script" path="res://Scripts/StateMachine.gd" id="3_t6hly"]
[ext_resource type="Script" path="res://Scripts/PlayerStates/PlayerIdle.gd" id="4_yip7q"]
[ext_resource type="Script" path="res://Scripts/PlayerStates/PlayerRun.gd" id="5_74ds6"]
[ext_resource type="Script" path="res://Scripts/PlayerStates/PlayerFall.gd" id="6_6xk20"]
[ext_resource type="Script" path="res://Scripts/PlayerStates/PlayerJump.gd" id="7_wlqg1"]
[ext_resource type="PackedScene" uid="uid://bdjprqe3ros6a" path="res://Scenes/interactable.tscn" id="8_4wnlv"]
[ext_resource type="Script" path="res://Scripts/PlayerStates/PlayerInactive.gd" id="8_n44w1"]
[ext_resource type="Texture2D" uid="uid://capcih4pjtxxo" path="res://Assets/Effects/Free Smoke Fx Pixel 2/Smoke2.png" id="9_nlfhw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lvkwt"]
size = Vector2(19, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vk0s"]
atlas = ExtResource("1_siewb")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jk7w"]
atlas = ExtResource("1_siewb")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qy4ie"]
atlas = ExtResource("1_siewb")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_luc3u"]
atlas = ExtResource("1_siewb")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmhdj"]
atlas = ExtResource("1_siewb")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4d1v"]
atlas = ExtResource("1_siewb")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qh3j"]
atlas = ExtResource("1_siewb")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnt28"]
atlas = ExtResource("1_siewb")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxxmn"]
atlas = ExtResource("1_siewb")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pbyi"]
atlas = ExtResource("1_siewb")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yw72"]
atlas = ExtResource("1_siewb")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4o55"]
atlas = ExtResource("1_siewb")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmj4k"]
atlas = ExtResource("1_siewb")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dr3o"]
atlas = ExtResource("1_siewb")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjobe"]
atlas = ExtResource("1_siewb")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eltr7"]
atlas = ExtResource("1_siewb")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewsqm"]
atlas = ExtResource("1_siewb")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdb4t"]
atlas = ExtResource("1_siewb")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ngli"]
atlas = ExtResource("1_siewb")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ux14i"]
atlas = ExtResource("1_siewb")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmpe3"]
atlas = ExtResource("1_siewb")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8s75"]
atlas = ExtResource("1_siewb")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_brdo1"]
atlas = ExtResource("1_siewb")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwvug"]
atlas = ExtResource("1_siewb")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_77bfp"]
atlas = ExtResource("1_siewb")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh4cj"]
atlas = ExtResource("1_siewb")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ep6oo"]
atlas = ExtResource("1_siewb")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmxsc"]
atlas = ExtResource("1_siewb")
region = Rect2(192, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vrgiw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vk0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jk7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy4ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luc3u")
}],
"loop": true,
"name": &"PlayerFall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmhdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4d1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qh3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnt28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxxmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pbyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yw72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4o55")
}],
"loop": true,
"name": &"PlayerIdle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmj4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dr3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjobe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eltr7")
}],
"loop": true,
"name": &"PlayerJump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewsqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdb4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ngli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ux14i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmpe3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8s75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brdo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwvug")
}],
"loop": true,
"name": &"PlayerRun",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_77bfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bh4cj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep6oo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmxsc")
}],
"loop": true,
"name": &"PlayerSlash",
"speed": 10.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4k76t"]
particles_animation = true
particles_anim_h_frames = 16
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hoi0f"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_layer = 4
script = ExtResource("1_nm4va")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_lvkwt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vrgiw")
animation = &"PlayerIdle"
frame = 3
frame_progress = 0.333296

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("inital_state")]
script = ExtResource("3_t6hly")
inital_state = NodePath("PlayerIdle")

[node name="PlayerIdle" type="Node" parent="StateMachine" node_paths=PackedStringArray("Player", "Collision", "AnimatedSprite", "RunParticles", "InteractMgr")]
script = ExtResource("4_yip7q")
Player = NodePath("../..")
Collision = NodePath("../../CollisionShape2D")
AnimatedSprite = NodePath("../../AnimatedSprite2D")
RunParticles = NodePath("../../RunParticles")
InteractMgr = NodePath("../../Interactable")

[node name="PlayerRun" type="Node" parent="StateMachine" node_paths=PackedStringArray("Player", "Collision", "AnimatedSprite", "RunParticles", "InteractMgr")]
script = ExtResource("5_74ds6")
Player = NodePath("../..")
Collision = NodePath("../../CollisionShape2D")
AnimatedSprite = NodePath("../../AnimatedSprite2D")
RunParticles = NodePath("../../RunParticles")
InteractMgr = NodePath("../../Interactable")

[node name="PlayerFall" type="Node" parent="StateMachine" node_paths=PackedStringArray("Player", "Collision", "AnimatedSprite", "RunParticles", "InteractMgr")]
script = ExtResource("6_6xk20")
Player = NodePath("../..")
Collision = NodePath("../../CollisionShape2D")
AnimatedSprite = NodePath("../../AnimatedSprite2D")
RunParticles = NodePath("../../RunParticles")
InteractMgr = NodePath("../../Interactable")

[node name="PlayerJump" type="Node" parent="StateMachine" node_paths=PackedStringArray("Player", "Collision", "AnimatedSprite", "RunParticles", "InteractMgr")]
script = ExtResource("7_wlqg1")
Player = NodePath("../..")
Collision = NodePath("../../CollisionShape2D")
AnimatedSprite = NodePath("../../AnimatedSprite2D")
RunParticles = NodePath("../../RunParticles")
InteractMgr = NodePath("../../Interactable")

[node name="PlayerInactive" type="Node" parent="StateMachine" node_paths=PackedStringArray("Player", "Collision", "AnimatedSprite", "RunParticles", "InteractMgr")]
script = ExtResource("8_n44w1")
Player = NodePath("../..")
Collision = NodePath("../../CollisionShape2D")
AnimatedSprite = NodePath("../../AnimatedSprite2D")
RunParticles = NodePath("../../RunParticles")
InteractMgr = NodePath("../../Interactable")

[node name="Interactable" parent="." instance=ExtResource("8_4wnlv")]

[node name="RunParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_4k76t")
position = Vector2(-1, 13)
amount = 1
process_material = SubResource("ParticleProcessMaterial_hoi0f")
texture = ExtResource("9_nlfhw")
lifetime = 0.2
